--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build-pord:
     docker:
-      - image: cimg/node18.20.0-browsers
+      - image: cimg/node:18.20.0-browsers
     steps:
       - checkout
       - restore_cache:
