--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,17 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: npm-cache-{{ checksum "package-lock.json"}}
+          key: npm-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: npm install
       - save_cache:
           paths:
             - ~/.npm
-          key: npm-cache-{{ checksum "package-lock.json"}}
+          key: npm-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Building the application
-          command: npm run build-prod
+          command: npm run build:prod
       - run:
           name: Install Chrome
           command: |
