--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           key: npm-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependecies
-          command: install npm
+          command: npm install
       - save_cache:
           paths:
             - ~/.npm
