--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,8 @@ jobs:
       - run:
           name: Sync to S3
           command: | 
-            DIST_OUTPUT_DIR==$(find dist -maxdepth 1 -type d | awk 'NR==2')
-            aws s3 sync $DIST_OUTPUT_DIR/browser/ s3://$S3_BUCKET_NAME --delete
+            DIST_OUTPUT_DIR=$(find dist -maxdepth 1 -type d | awk 'NR==2')
+            aws s3 sync ${DIST_OUTPUT_DIR}/browser/ s3://$S3_BUCKET_NAME --delete
 workflows:
   version: 2
   build_test_deploy:
